--- a/sky-data-tool/src/main/resources/conf.properties
+++ b/sky-data-tool/src/main/resources/conf.properties
@@ -6,3 +6,16 @@ transfer.sf.data.suffix=.txt
 transfer.sf.data.target.dir=D:/test/t1
 # 生成json 文件的记录数
 transfer.sf.data.jsonSize=1000
+
+##################### MAC And Mobile 数据从文件中抽取工具配置开始 #####################
+transfer.mobile.data.source.dir=E:/test/test-2.txt
+transfer.mobile.data.target.dir=E:/test/
+transfer.mobile.data.suffix=txt
+transfer.mobile.data.pool.size=10
+transfer.mobile.data.pool.sleep=200
+transfer.mobile.data.sleep=1000 
+transfer.mobile.data.sleep.counts=10000
+transfer.mobile.data.jsonSize=5000
+transfer.mobile.data.type=13
+transfer.mobile.deal.type=2
+##################### MAC And Mobile 数据从文件中抽取工具配置结束 #####################
