add insert mysql demos

--- a/sky-data-tool/src/main/resources/conf.properties
+++ b/sky-data-tool/src/main/resources/conf.properties
@@ -19,3 +19,12 @@ transfer.mobile.data.jsonSize=5000
 transfer.mobile.data.type=13
 transfer.mobile.deal.type=2
 ##################### MAC And Mobile 数据从文件中抽取工具配置结束 #####################
+
+##################### Sd Person 入 Mysql 工具配置结束 #####################
+mysql.conn=jdbc:mysql://localhost:3306/gacenter|root|root
+sd.person.source.file.path=E:/sd_person.txt
+sd.person.pool.size=1
+sd.person.limit.counts=4000
+sd.person.limit.counts.sleep=20000
+sd.person.pool.batch.size=4000
+##################### Sd Person 入 Mysql 工具配置开始 #####################
