add sd person demo

--- a/sky-data-tool/src/main/resources/conf.properties
+++ b/sky-data-tool/src/main/resources/conf.properties
@@ -28,3 +28,16 @@ sd.person.limit.counts=4000
 sd.person.limit.counts.sleep=20000
 sd.person.pool.batch.size=4000
 ##################### Sd Person 入 Mysql 工具配置开始 #####################
+
+##################### Sd Person生成Json文件工具配置开始 #####################
+transfer.person.data.source.dir=E:/test/sd_person.txt
+transfer.person.data.target.dir=E:/test
+transfer.person.data.suffix=txt
+transfer.person.data.pool.size=10
+transfer.person.data.sleep=1000
+transfer.person.data.pool.sleep=200
+transfer.person.data.sleep.counts=40000
+transfer.person.data.jsonSize=5000
+transfer.person.data.type=15
+transfer.person.deal.type=1
+##################### Sd Person生成Json文件工具配置结束 #####################
