add tianwei transfer data tool

--- a/sky-data-tool/src/main/resources/conf.properties
+++ b/sky-data-tool/src/main/resources/conf.properties
@@ -41,3 +41,15 @@ transfer.person.data.jsonSize=5000
 transfer.person.data.type=15
 transfer.person.deal.type=1
 ##################### Sd Person生成Json文件工具配置结束 #####################
+
+##################### Tian Wei 生成Json文件工具配置开始 #####################
+transfer.tianwei.data.source.dir=E:/test/scb_sz.txt
+transfer.tianwei.data.target.dir=E:/test/scb1
+transfer.tianwei.data.suffix=txt
+transfer.tianwei.data.pool.size=10
+transfer.tianwei.data.sleep=1000
+transfer.tianwei.data.pool.sleep=200
+transfer.tianwei.data.sleep.counts=50000
+transfer.tianwei.data.jsonSize=5000
+transfer.tianwei.data.type=15
+##################### Tian Wei生成Json文件工具配置结束 #####################
