--- a/sky-tool-zookeeper/src/main/resources/log4j.properties
+++ b/sky-tool-zookeeper/src/main/resources/log4j.properties
@@ -1,16 +1,21 @@
-log4j.debug=true 
-log4j.rootLogger=DEBUG,D,E 
-log4j.appender.E = org.apache.log4j.DailyRollingFileAppender
-log4j.appender.E.File = logs/logs.log
-log4j.appender.E.Append = true
-log4j.appender.E.Threshold = DEBUG
-log4j.appender.E.layout = org.apache.log4j.PatternLayout
-log4j.appender.E.layout.ConversionPattern = %-d{yyyy-MM-dd HH:mm:ss} [ %t:%r ] - [ %p ] %m%n
-#log4j.appender.E.layout.
+# Output pattern : date [thread] priority category - message
+log4j.rootLogger=INFO, Console, RollingFile
 
-log4j.appender.D = org.apache.log4j.DailyRollingFileAppender
-log4j.appender.D.File = logs/error.log
-log4j.appender.D.Append = true
-log4j.appender.D.Threshold = ERROR
-log4j.appender.D.layout = org.apache.log4j.PatternLayout
-log4j.appender.D.layout.ConversionPattern = %-d{yyyy-MM-dd HH:mm:ss} [ %t:%r ] - [ %p ] %m%n
+# Console Appender
+log4j.appender.Console=org.apache.log4j.ConsoleAppender
+# Console Appender layout
+log4j.appender.Console.layout=org.apache.log4j.PatternLayout
+# Console Appender layout pattern
+log4j.appender.Console.layout.ConversionPattern=%d{yyyy/MM/dd HH:mm:ss} [%t] %-5p [%c] - %m%n
+
+# RollingFile
+log4j.appender.RollingFile=org.apache.log4j.DailyRollingFileAppender
+# RollingFile file path and name
+log4j.appender.RollingFile.File=logs/log.log
+# RollingFile layout
+log4j.appender.RollingFile.layout=org.apache.log4j.PatternLayout
+# RollingFile layout pattern
+log4j.appender.RollingFile.layout.ConversionPattern=%d{yyyy/MM/dd HH:mm:ss} [%t] %-5p [%c] - %m%n
+
+# Project default logger level
+log4j.logger.com.sky.projects.tool.zookeeper=DEBUG
