--- a/sky-tool-zookeeper/src/main/resources/log4j.properties
+++ b/sky-tool-zookeeper/src/main/resources/log4j.properties
@@ -1,21 +1,29 @@
 # Output pattern : date [thread] priority category - message
-log4j.rootLogger=INFO, Console, RollingFile
+log4j.rootLogger=DEBUG, Console, RollingFile
 
-# Console Appender
+# Console
 log4j.appender.Console=org.apache.log4j.ConsoleAppender
-# Console Appender layout
 log4j.appender.Console.layout=org.apache.log4j.PatternLayout
-# Console Appender layout pattern
 log4j.appender.Console.layout.ConversionPattern=%d{yyyy/MM/dd HH:mm:ss} [%t] %-5p [%c] - %m%n
 
 # RollingFile
 log4j.appender.RollingFile=org.apache.log4j.DailyRollingFileAppender
-# RollingFile file path and name
-log4j.appender.RollingFile.File=logs/log.log
-# RollingFile layout
+log4j.appender.RollingFile.File=logs/imcapture.log
 log4j.appender.RollingFile.layout=org.apache.log4j.PatternLayout
-# RollingFile layout pattern
 log4j.appender.RollingFile.layout.ConversionPattern=%d{yyyy/MM/dd HH:mm:ss} [%t] %-5p [%c] - %m%n
 
-# Project default logger level
-log4j.logger.com.sky.projects.tool.zookeeper=DEBUG
+# Project defalult level
+log4j.logger.com.sky.projects.apache.common=DEBUG
+# kafka
+log4j.logger.kafka=ERROR
+# zookeeper
+log4j.logger.org.apache.zookeeper=ERROR
+# EhCache
+log4j.logger.net.sf.ehcache=ERROR
+log4j.logger.org.hibernate=ERROR
+log4j.logger.org.jboss=ERROR
+log4j.logger.org.apache.commons=ERROR
+#Spring Framework default level
+#log4j.category.org.springframework=ERROR
+#log4j.logger.com.google.code.yanf4j=ERROR
+#log4j.logger.net.rubyeye.xmemcached=ERROR
