--- a/sky-data-tool/pom.xml
+++ b/sky-data-tool/pom.xml
@@ -71,21 +71,19 @@
 			<artifactId>ganymed-ssh2</artifactId>
 			<version>262</version>
 		</dependency>
-
-		<!-- hbase dependency start -->
+		<!-- Hbase -->
 		<dependency>
 			<groupId>org.apache.hbase</groupId>
 			<artifactId>hbase-client</artifactId>
-			<version>1.1.2</version>
+			<version>0.98.16-hadoop2</version>
+			<exclusions>
+				<exclusion>
+					<groupId>jdk.tools</groupId>
+					<artifactId>jdk.tools</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
-		<dependency>
-			<groupId>jdk.tools</groupId>
-			<artifactId>jdk.tools</artifactId>
-			<version>1.7</version>
-			<scope>system</scope>
-			<systemPath>${JAVA_HOME}/lib/tools.jar</systemPath>
-		</dependency>
-		<!-- hbase dependency end -->
+		<!-- Hbase -->
 
 		<dependency>
 			<groupId>mysql</groupId>
